gcc/testsuite/g++.dg/cpp2a/contracts-label3.C
// { dg-do compile { target c++17_down } }
#include <experimental/contracts>
// { dg-error "only available with -std=c..20" "" { target c++17_down } 36 }

